--- a/FAQ.html
+++ b/FAQ.html
@@ -13,7 +13,7 @@
   <header>
     <div class="main">
       <ul>
-        <li><a href="home.html">Home</a><i class="fa fa-home"></i></li>
+        <li><a href="index.html">Home</a><i class="fa fa-home"></i></li>
         <li><a href="/About.html">About</a><i class="fa fa-users"></i></li>
         <li><a href="/FAQ.html">FAQ</a><i class="fa fa-clone"></i></li>
         <li><a href="contacts.html">Contacts</a><i class="fa fa-phone"></i></li>      </ul>
@@ -31,7 +31,7 @@
             </a>
             <div class="answer">
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vol
+                We specialise in a variety of Tattoos si it depends on the sizes and how big is the tattoo you desire
               </p>
             </div>
           </div>
@@ -43,7 +43,7 @@
             </a>
             <div class="answer">
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vol
+                Lol That is a funny question, yes some tattoos are stinging during the process but it is worth it
               </p>  
             </div>          
           </div>
@@ -55,7 +55,7 @@
             </a>
             <div class="answer">
               <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vol
+                Yes please
               </p>
             </div>
           </div>
@@ -67,7 +67,7 @@
             </a>
             <div class="answer">
                 <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vol
+                I have quite a lot of experience in the industry it has been like 5 months
               </p>
             </div>
           </div>
