--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,7 @@
     <header>
         <div class="main">
             <ul>
-                <li><a href="home.html">Home</a><i class="fa fa-home"></i></li>
+                <li><a href="index.html">Home</a><i class="fa fa-home"></i></li>
                 <li><a href="About.html">About</a><i class="fa fa-users"></i></li>
                 <li><a href="FAQ.html">FAQ</a><i class="fa fa-clone"></i></li>
                 <li><a href="contacts.html">Contacts</a><i class="fa fa-phone"></i></li>        </div>
@@ -34,12 +34,7 @@
         <p>
           <label>Your Email: <input type="email" name="email" /></label>
         </p>
-        <p>
-          <label> Role: <select name="role[]" multiple>
-            <option value="leader">Remove Tattoo</option>
-            <option value="follower">make a Tattoo</option>
-          </select></label>
-        </p>
+        
         <p>
           <label>Message: <textarea name="message"></textarea></label>
         </p>
