--- a/About.html
+++ b/About.html
@@ -13,7 +13,7 @@
     <header>
         <div class="main">
             <ul>
-                <li><a href="home.html">Home</a><i class="fa fa-home"></i></li>
+                <li><a href="index.html">Home</a><i class="fa fa-home"></i></li>
                 <li><a href="About.html">About</a><i class="fa fa-users"></i></li>
                 <li><a href="FAQ.html">FAQ</a><i class="fa fa-clone"></i></li>
                 <li><a href="contacts.html">Contacts</a><i class="fa fa-phone"></i></li>        </div>
@@ -21,7 +21,6 @@
 
 <div class="about">
 <h1>ABOUT</h1>
-<img src="images.jpeg;">
 </div>
 
 <div class="cards-list">
