--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="main">
       <ul>
-        <li><a href="home.html">Home</a><i class="fa fa-home"></i></li>
+        <li><a href="index.html">Home</a><i class="fa fa-home"></i></li>
         <li><a href="/About.html">About</a><i class="fa fa-users"></i></li>
         <li><a href="/FAQ.html">FAQ</a><i class="fa fa-clone"></i></li>
         <li><a href="contacts.html">Contacts</a><i class="fa fa-phone"></i></li>      </ul>
