made errors i cant find

--- a/About.html
+++ b/About.html
@@ -21,16 +21,44 @@
 
 <div class="about">
 <h1>ABOUT</h1>
+<p>We specialize in great art called Tattoos and every team member is a happy person because they are doing what they love, Tattoos are not a sign of being a criminal its the love of art but have to be careful because tattoos last forever </p>
+<p>We are a company that started 3 years ago and we still pushing our passion our goal is to make everyone feel special and cool with the art on their bodies</p>
+</div>
+<div class="container_box">
+    <div class="box">
+      <div class="icon1"><i class="fa fa-child" aria-hidden="true"></i></i></div>
+      <div class="detail">
+        <h3>Donates</h3>
+        <p>Every end of the month we donate money to orphanage home and for the less fortunate.</p>
+      </div>
+      </div>
+      <div class="container_box">
+        <div class="box">
+          <div class="icon1"><i class="fa fa-map" aria-hidden="true"></i></i></div>
+          <div class="detail">
+            <h3>Location</h3>
+            <p>
+              114 Bree street
+              CapeTown
+              8100
+              .</p>
+          </div>
+          </div>
+          <div class="container_box">
+            <div class="box">
+              <div class="icon1"><i class="fa fa-money" aria-hidden="true"></i></i></div>
+              <div class="detail">
+                <h3>Costing</h3>
+                <p>We have come to a point to decrease our costs for tattoos for everyone to afford one.</p>
+              </div>
+              </div>
+   
+  </div>
+
+
+  </div>
 </div>
 
-<div class="cards-list">
-  
-    <div class="card 1">
-      <div class="card_image"> <img src="images.jpeg" /> </div>
-      <div class="card_title title-white">
-        <p>HD Tattoos</p>
-      </div>
-    </div>
 </body>
 
 </html>
