--- a/contacts.html
+++ b/contacts.html
@@ -24,7 +24,7 @@
 <div class="details">
         <div class="contact-form">
             <div class="inputs">
-                <form name="contact" method="POST" data-netlify="true">
+                <form name="contact" action="mailto:tabangduda97@gmail.com" method="POST" data-netlify="true">
         <p>
           <label>Your Name: <input type="text" name="name" /></label>   
         </p>
@@ -34,7 +34,7 @@
         <p>
           <label>Your Email: <input type="email" name="email" /></label>
         </p>
-        
+
         <p>
           <label>Message: <textarea name="message"></textarea></label>
         </p>
