--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Tattoo workshop</title>
 </head>
 <body>
@@ -15,18 +16,57 @@
         <li><a href="/About.html">About</a><i class="fa fa-users"></i></li>
         <li><a href="/FAQ.html">FAQ</a><i class="fa fa-clone"></i></li>
         <li><a href="contacts.html">Contacts</a><i class="fa fa-phone"></i></li>      </ul>
+        <div class="Button">
+          <a href="https://www.youtube.com/embed/JXS_4z57pQ0?start=9" class="btn">Learn more</a> 
+          <br>
+          <br>
+          <a href="https://www.youtube.com/embed/rDni9TGVQRI" class="btn">Videos</a>
+        </div>
     </div>
+    
     <div class="title">
-      <h1>BANG INK</h1>
-      <h5>Looking for a Perfect piece of Art on your body? well yopu found just the Perfect place we offer Master piece Tattoos and more</h5>
+      <h1>BANG INK TATTOOS</h1>
+          </div>
+          <div class="row">
+            <div class="col">
+              <div class="card">
+                <div class="inner-box">
+                  <div class="card-front">
+                    <span> HD Tattoos</span>
+                  </div>
+                  <div class="card-back"> 
+                    <p>shoulder</p>
+
+                  </div>
+
+                </div>
+              </div>
+              <div class="col">
+                <div class="card">
+                  <div class="inner-box">
+                    <div class="card-front">
+                      <span> HD Tattoos</span>
+                    </div>
+                    <div class="card-back"> 
+                      <p>shoulder</p>
+  
+                    </div>
+  
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+         
+
 
     </div>
-    <div class="Button">
-      <a href="#" class="btn">Learn more</a> 
-      <br>
-      <br>
-      <a href="https://www.youtube.com/watch?v=SVXBqAjp8XM" class="btn">Videos</a>
-    </div>
+  </div>
   </header>
 </div> 
 </body>
