Made changes on site

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Tattoo workshop</title>
 </head>
-<body>
+<body style="text-align: center;">
   <header>
     <div class="main">
       <ul>
         <li><a href="index.html">Home</a><i class="fa fa-home"></i></li>
-        <li><a href="/About.html">About</a><i class="fa fa-users"></i></li>
-        <li><a href="/FAQ.html">FAQ</a><i class="fa fa-clone"></i></li>
+        <li><a href="About.html">About</a><i class="fa fa-users"></i></li>
+        <li><a href="FAQ.html">FAQ</a><i class="fa fa-clone"></i></li>
         <li><a href="contacts.html">Contacts</a><i class="fa fa-phone"></i></li>      </ul>
     </div>
     <div class="title">
       <h1>BANG INK</h1>
-      <h5>Looking for a Perfect piece of Art on your body? well yopu found just the Perfect place we offer Master piece Tattoos and more</h5>
+      <h5>Looking for a Perfect piece of Art on your body? well you found just the Perfect place we offer Master piece Tattoos and more</h5>
 
     </div>
     <div class="Button">
@@ -27,7 +27,25 @@
       <br>
       <a href="https://www.youtube.com/watch?v=SVXBqAjp8XM" class="btn">Videos</a>
     </div>
+    <div class="container">
+
+      <h1>flip card</h1>
+      
+      <div class="row">
+        <div class="col">
+          <div class="inner-box">
+            <div class="card-front">
+              <span><img src="images.jpeg" alt="Tat move"></span> 
+              <!-- <span>much</span> -->
+            </div>
+            <div class="card-back">
+                  <p>Skull Tattoos</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
-</div> 
+<!-- </div>  -->
 </body>
 </html>
