--- a/About.html
+++ b/About.html
@@ -9,7 +9,7 @@
     <title>Tattoo workshop</title>
 </head>
 
-<body>
+<body style="text-align: center;">
     <header>
         <div class="main">
             <ul>
@@ -21,16 +21,7 @@
 
 <div class="about">
 <h1>ABOUT</h1>
-</div>
 
-<div class="cards-list">
-  
-    <div class="card 1">
-      <div class="card_image"> <img src="images.jpeg" /> </div>
-      <div class="card_title title-white">
-        <p>HD Tattoos</p>
-      </div>
-    </div>
 </body>
 
 </html>
