--- a/FAQ.html
+++ b/FAQ.html
@@ -9,72 +9,72 @@
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
     <title>Tattoo workshop</title>
 </head>
-<body>
+<body style="text-align: center;">
   <header>
     <div class="main">
       <ul>
         <li><a href="index.html">Home</a><i class="fa fa-home"></i></li>
         <li><a href="/About.html">About</a><i class="fa fa-users"></i></li>
         <li><a href="/FAQ.html">FAQ</a><i class="fa fa-clone"></i></li>
-        <li><a href="contacts.html">Contacts</a><i class="fa fa-phone"></i></li>      </ul>
+        <li><a href="contacts.html">Contacts</a><i class="fa fa-phone"></i></li>      
+      </ul>
     </div>
-    <div class="title">
-      <h1>FAQ</h1>
-    </div>
-    <section>
-      <div class="container">
-        <div class="FAQ">
-          <div class="FAQ-item" id="first Question">
-            <a class="FAQ-link" href="#first Question">
-              How much does a Tattoo cost?
-
-            </a>
-            <div class="answer">
-              <p>
-                We specialise in a variety of Tattoos si it depends on the sizes and how big is the tattoo you desire
-              </p>
-            </div>
+  </header>
+  <div class="title">
+    <h1>FAQ</h1>
+  </div>
+  <section>
+    <div class="container">
+      <div class="FAQ">
+        <div class="FAQ-item" id="first Question">
+          <a class="FAQ-link" href="#first Question">
+            How much does a Tattoo cost?
+          </a>
+          <div class="answer">
+            <p>
+              We specialise in a variety of Tattoos si it depends on the sizes and how big is the tattoo you desire
+            </p>
           </div>
+        </div>
 
 
-          <div class="FAQ-item" id="sec Question">
-            <a class="FAQ-link" href="#sec Question">
-              How painful is it to do Tattoo?
-            </a>
-            <div class="answer">
-              <p>
-                Lol That is a funny question, yes some tattoos are stinging during the process but it is worth it
-              </p>  
-            </div>          
+        <div class="FAQ-item" id="sec Question">
+          <a class="FAQ-link" href="#sec Question">
+            How painful is it to do Tattoo?
+          </a>
+          <div class="answer">
+            <p>
+              Lol That is a funny question, yes some tattoos are stinging during the process but it is worth it
+            </p>  
+          </div>          
+        </div>
+
+
+        <div class="FAQ-item" id="third Question">
+          <a class="FAQ-link" href="#third Question">
+            Do we have to make appointments to come make a Tattoo?
+          </a>
+          <div class="answer">
+            <p>
+              Yes please
+            </p>
           </div>
+        </div>
 
+        <div class="FAQ-item" id="fourth Question">
+          <a class="FAQ-link" href="#fourth Question">
+            How long have you been doing Tattoos?
 
-          <div class="FAQ-item" id="third Question">
-            <a class="FAQ-link" href="#third Question">
-              Do we have to make appointments to come make a Tattoo?
-            </a>
-            <div class="answer">
+          </a>
+          <div class="answer">
               <p>
-                Yes please
-              </p>
-            </div>
-          </div>
-
-          <div class="FAQ-item" id="fourth Question">
-            <a class="FAQ-link" href="#fourth Question">
-              How long have you been doing Tattoos?
-
-            </a>
-            <div class="answer">
-                <p>
-                I have quite a lot of experience in the industry it has been like 5 months
-              </p>
-            </div>
+              I have quite a lot of experience in the industry it has been like 5 months
+            </p>
           </div>
         </div>
       </div>
-    </section>
-  </header>
+    </div>
+  </section>
  </div> 
 </body>
 </html>
