--- a/contacts.html
+++ b/contacts.html
@@ -9,7 +9,7 @@
     <title>Tattoo workshop</title>
 </head>
 
-<body>
+<body style="text-align: center;">
     <header>
         <div class="main">
             <ul>
