--- a/About.html
+++ b/About.html
@@ -9,7 +9,7 @@
     <title>Tattoo workshop</title>
 </head>
 
-<body style="text-align: center;">
+<body>
     <header>
         <div class="main">
             <ul>
@@ -21,7 +21,6 @@
 
 <div class="about">
 <h1>ABOUT</h1>
-<<<<<<< HEAD
 <p>We specialize in great art called Tattoos and every team member is a happy person because they are doing what they love, Tattoos are not a sign of being a criminal its the love of art but have to be careful because tattoos last forever </p>
 <p>We are a company that started 3 years ago and we still pushing our passion our goal is to make everyone feel special and cool with the art on their bodies</p>
 </div>
@@ -59,8 +58,6 @@
 
   </div>
 </div>
-=======
->>>>>>> b048fbb40dabbfb3d269edabf3b93f5a7f714497
 
 </body>
 
