--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Tattoo workshop</title>
 </head>
-<body style="text-align: center;">
+<body>
   <header>
     <div class="main">
       <ul>
         <li><a href="index.html">Home</a><i class="fa fa-home"></i></li>
-        <li><a href="About.html">About</a><i class="fa fa-users"></i></li>
-        <li><a href="FAQ.html">FAQ</a><i class="fa fa-clone"></i></li>
+        <li><a href="/About.html">About</a><i class="fa fa-users"></i></li>
+        <li><a href="/FAQ.html">FAQ</a><i class="fa fa-clone"></i></li>
         <li><a href="contacts.html">Contacts</a><i class="fa fa-phone"></i></li>      </ul>
         <div class="Button">
           <a href="https://www.youtube.com/embed/JXS_4z57pQ0?start=9" class="btn">Learn more</a> 
@@ -25,7 +25,6 @@
     </div>
     
     <div class="title">
-<<<<<<< HEAD
       <h1>BANG INK TATTOOS</h1>
           </div>
           <div class="row">
@@ -53,37 +52,7 @@
 
     </div>
   </div>
-=======
-      <h1>BANG INK</h1>
-      <h5>Looking for a Perfect piece of Art on your body? well you found just the Perfect place we offer Master piece Tattoos and more</h5>
-
-    </div>
-    <div class="Button">
-      <a href="#" class="btn">Learn more</a> 
-      <br>
-      <br>
-      <a href="https://www.youtube.com/watch?v=SVXBqAjp8XM" class="btn">Videos</a>
-    </div>
-    <div class="container">
-
-      <h1>flip card</h1>
-      
-      <div class="row">
-        <div class="col">
-          <div class="inner-box">
-            <div class="card-front">
-              <span><img src="images.jpeg" alt="Tat move"></span> 
-              <!-- <span>much</span> -->
-            </div>
-            <div class="card-back">
-                  <p>Skull Tattoos</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
->>>>>>> b048fbb40dabbfb3d269edabf3b93f5a7f714497
   </header>
-<!-- </div>  -->
+</div> 
 </body>
 </html>
