--- a/contacts.html
+++ b/contacts.html
@@ -2,50 +2,51 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="home.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Tattoo workshop</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title>Tattoo workshop</title>
 </head>
 
 <body style="text-align: center;">
-    <header>
-        <div class="main">
-            <ul>
-                <li><a href="index.html">Home</a><i class="fa fa-home"></i></li>
-                <li><a href="About.html">About</a><i class="fa fa-users"></i></li>
-                <li><a href="FAQ.html">FAQ</a><i class="fa fa-clone"></i></li>
-                <li><a href="contacts.html">Contacts</a><i class="fa fa-phone"></i></li>        </div>
-    </header>
+  <header>
+    <div class="main">
+      <ul>
+        <li><a href="index.html">Home</a><i class="fa fa-home"></i></li>
+        <li><a href="About.html">About</a><i class="fa fa-users"></i></li>
+        <li><a href="FAQ.html">FAQ</a><i class="fa fa-clone"></i></li>
+        <li><a href="contacts.html">Contacts</a><i class="fa fa-phone"></i></li>
+    </div>
+  </header>
 
-<div class="contacts">
+  <div class="contacts">
     <h1>Contact us</h1>
-<div class="details">
-        <div class="contact-form">
-            <div class="inputs">
-                <form name="contact" action="mailto:tabangduda97@gmail.com" method="POST" data-netlify="true">
-        <p>
-          <label>Your Name: <input type="text" name="name" /></label>   
-        </p>
-        <p>
-            <label>Your number: <input typse="text" name="number" /></label>   
-          </p>
-        <p>
-          <label>Your Email: <input type="email" name="email" /></label>
-        </p>
+    <div class="details">
+      <div class="contact-form">
+        <div class="inputs">
+          <form name="contact" action="https://formspree.io/f/Tabangduda97@gmail.com" method="POST" data-netlify="true">
+            <p>
+              <label>Your Name: <input type="text" name="name" /></label>
+            </p>
+            <p>
+              <label>Your number: <input typse="text" name="number" /></label>
+            </p>
+            <p>
+              <label>Your Email: <input type="email" name="email" /></label>
+            </p>
 
-        <p>
-          <label>Message: <textarea name="message"></textarea></label>
-        </p>
-        <p>
-          <button type="submit">Send</button>
-      </form>
-</div> 
-</div>
-</div>     
-</div>
-</p>
+            <p>
+              <label>Message: <textarea name="message"></textarea></label>
+            </p>
+            <p>
+              <button type="submit">Send</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  </p>
 </body>
 
 </html>
